--- a/css/style.css
+++ b/css/style.css
@@ -73,14 +73,17 @@ input:focus {
  * Structure
  */
 .wrapper {
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    border-bottom: 1px solid black;
     max-width: 980px;
     width: 980px;
     padding: 10px 0px;
     margin: 0px auto;
     position:relative;
+}
+
+main {
+    webkit-box-shadow: 0 1px 2px #333333;
+    -moz-box-shadow: 0 1px 2px #333333;
+    box-shadow: 0 1px 2px #333333;
 }
 
 .header {
